changed name of project

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>SR16_BMS_Reduced_Delay</name>
+	<name>SR16_BMS</name>
 	<comment></comment>
 	<projects>
 	</projects>
